--- a/style.css
+++ b/style.css
@@ -76,8 +76,23 @@ p, li{
     }
     ul{
         line-height: 150%;
-        margin-left: 24px;;
+        margin-left: 24px;
+        li{
+            padding-left: 14px;
+            margin-bottom: 8px;
+            strong {
+                color: var(--Stone-900);
+            }
+        }
+        li::marker{
+            color: var(--Rose-800);
+        }
     }
 }
-
+.ingredients {
+    .subtitle {
+        font-family: var(--young-serif);
+        color: var(--Brown-800);
+    }
+}
 
