--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ main{
 .container {
     width: 738px;
     background-color: white;
+    color: var(--Stone-600);
     padding: 40px;
     margin-top: 124px;
     margin-bottom: 124px;
@@ -46,11 +47,12 @@ main{
 }
 .container img {
     width: 100%;
-    border-radius: 25px;
+    border-radius: 12px;
+    
 }
 
 .content {
-    margin: 40px 32px;
+    margin: 40px 0;
 }
 
 h1{
@@ -61,9 +63,7 @@ h1{
     line-height: 100%;
     margin-bottom: 24px;
 }
-p, li{
-    color: var(--Stone-600);
-}
+
 .preparation {
     background-color: var(--Rose-50);
     border-radius: 25px;
@@ -81,18 +81,45 @@ p, li{
             padding-left: 14px;
             margin-bottom: 8px;
             strong {
-                color: var(--Stone-900);
+                color: var(--Stone-600);
             }
         }
         li::marker{
             color: var(--Rose-800);
+            font-size: small;
         }
     }
 }
 .ingredients {
+    margin: 16px 0;
     .subtitle {
         font-family: var(--young-serif);
         color: var(--Brown-800);
+        font-size: 1.8rem;
+        font-weight: 400;
+        padding: 16px 0;
+    }
+    ul {
+        line-height: 150%;
+        margin-left: 24px;
+        li{
+            padding-left: 14px;
+            margin-bottom: 8px;
+        }
+        li::marker{
+            color: var(--Brown-800);
+            font-size: small;
+        }
+        
     }
 }
 
+.instructions {
+    .subtitle {
+        font-family: var(--young-serif);
+        color: var(--Brown-800);
+        font-size: 1.8rem;
+        font-weight: 400;
+        padding: 16px 0;
+    }
+}
