--- a/style.css
+++ b/style.css
@@ -32,11 +32,18 @@ body{
 }
 
 main{
-    display: block;
-    justify-items: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    
 }
-.container {
+
+
+
+  
+
+.details {
+    
     width: 738px;
     background-color: white;
     color: var(--Stone-600);
@@ -45,14 +52,16 @@ main{
     margin-bottom: 124px;
     border-radius: 25px;
 }
-.container img {
+img {
     width: 100%;
     border-radius: 12px;
+    
     
 }
 
 .content {
-    margin: 40px 0;
+    margin: 0;
+
 }
 
 h1{
@@ -92,6 +101,7 @@ h1{
 }
 .ingredients {
     margin: 16px 0;
+    
     .subtitle {
         font-family: var(--young-serif);
         color: var(--Brown-800);
@@ -102,7 +112,7 @@ h1{
     ul {
         line-height: 150%;
         margin-left: 24px;
-        li{
+        li {
             padding-left: 14px;
             margin-bottom: 8px;
         }
@@ -115,11 +125,87 @@ h1{
 }
 
 .instructions {
+    padding: 30px 0;
+    border: 1px solid transparent;
+    border-top: 1px solid var(--Stone-100);
+    border-bottom: 1px solid var(--Stone-100);
     .subtitle {
         font-family: var(--young-serif);
         color: var(--Brown-800);
         font-size: 1.8rem;
         font-weight: 400;
-        padding: 16px 0;
+        padding-bottom : 16px;
     }
+    ol {
+        line-height: 175%;
+        margin-left: 24px;
+        li {
+            padding-left: 14px;
+            margin-bottom: 8px;
+        }
+        li::marker {
+            color: var(--Brown-800);
+            font-weight: 600;
+        }
+    }
+}
+
+.nutrition {
+    padding: 30px 0;
+    .subtitle {
+        font-family: var(--young-serif);
+        color: var(--Brown-800);
+        font-size: 1.8rem;
+        font-weight: 400;
+        padding-bottom : 16px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      tr {
+      border: 1px solid transparent;
+     
+      td {
+        padding: 11px 32px;
+      }
+      .value {
+        color: var(--Brown-800);
+        font-weight: bold;
+      }
+      
+      }
+      tr:not(:last-child){
+        border-bottom: 1px solid var(--Stone-100);
+      }
+        
+    }
+        
+}
+
+@media (max-width: 375px) {
+    body {
+        min-width: 375px;
+    }
+    .details {
+        width: 100%;
+        background-color: white;
+        color: var(--Stone-600);
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+        border-radius: 0;
+    }
+    .container{
+        width: 100%;
+        border-radius: 0;
+        padding: 30px;
+
+                
+    }
+    
+    .content {
+        margin:  30px 0; 
+    }
+  
+    
 }
