--- a/style.css
+++ b/style.css
@@ -34,8 +34,7 @@ body{
 main{
     display: flex;
     justify-content: center;
-    align-items: center;
-    
+           
 }
 
 
@@ -43,35 +42,39 @@ main{
   
 
 .details {
-    
-    width: 738px;
+    min-width: 375px;
+    max-width: 738px;
     background-color: white;
     color: var(--Stone-600);
-    padding: 40px;
     margin-top: 124px;
     margin-bottom: 124px;
-    border-radius: 25px;
+    
 }
 img {
     width: 100%;
-    border-radius: 12px;
-    
-    
+     
+}
+
+.container{
+    padding: 30px;
 }
 
 .content {
-    margin: 0;
-
+    padding: 30px 0;
+    p {
+        line-height: 150%;
+    }
+    
+    h1{
+        font-size: 2.2rem;
+        color: var(--Stone-900);
+        font-family: var(--young-serif);
+        font-weight: 400;
+        line-height: 100%;
+        margin-bottom: 24px;
+    }
 }
 
-h1{
-    font-size: 2.2rem;
-    color: var(--Stone-900);
-    font-family: var(--young-serif);
-    font-weight: 400;
-    line-height: 100%;
-    margin-bottom: 24px;
-}
 
 .preparation {
     background-color: var(--Rose-50);
@@ -182,30 +185,15 @@ h1{
         
 }
 
-@media (max-width: 375px) {
-    body {
-        min-width: 375px;
+@media (min-width: 738px) {
+.details{
+    border-radius: 25px;
+    padding: 30px;
+    img {
+        border-radius: 12px;
     }
-    .details {
-        width: 100%;
-        background-color: white;
-        color: var(--Stone-600);
-        padding: 0;
-        margin-top: 0;
-        margin-bottom: 0;
-        border-radius: 0;
-    }
-    .container{
-        width: 100%;
-        border-radius: 0;
-        padding: 30px;
-
-                
-    }
-    
-    .content {
-        margin:  30px 0; 
-    }
+}
+   
   
     
 }
